2002-12-04  Tim Jenness  <timj@jach.hawaii.edu>

	* BaseNDF.pm (readhdr): Add BaseNDF and BaseFile. Now use
	Astro::FITS::Header for reading of FITS headers.

2002-11-26  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm (parse_keyvalues): Add the ability to return array
	values that are comma delimited and quoted. 

2002-09-15  Tim Jenness  <timj@jach.hawaii.edu>

        -------------- Starlink Release 3.1-1 -------------------

2002-02-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Msg/Task/ADAM.pm (_to_orac_status): Add MSP__ error codes

2001-12-26  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm (getnum): Add is_numeric

2001-12-23  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm (vector): Add multi colored vectors to polplot

2001-12-13  Tim Jenness  <timj@jach.hawaii.edu>

	------------- Starlink Release V3.0-3	-----------------

	* Display/GAIA.pm (image): Change cwd to getcwd

	* Calib/CGS4.pm (rows): Now returns an array of rows.

2001-12-05  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Group.pm (subgrp): Try to use a numeric comparison if we have a number.

2001-12-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Index.pm (slurpindex): Support arrays and hashes

	* Display/KAPVIEW.pm (select_section): Fix warnings when
	compressing or no CUT present

2001-11-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (send_to_gaia): Attempt to catch null string
	return from recv

2001-11-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (orac_print): Add orac_throw

2001-10-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm (gui_id): Fix warnings when file() is undef

	* Msg/Control/AMS.pm: Use ADAM_NOPROMPT to turn off prompting

2001-10-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_parse_recursively): Should not have croak in output
	recipe (use die instead)

2001-09-19  Tim Jenness  <timj@jach.hawaii.edu>

	* Xorac.pm: Change to fixed font since arial is not recognized
	everywhere

2001-09-07  Tim Jenness  <timj@jach.hawaii.edu>