@@ -1,3 +1,8 @@
+2004-01-12  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Loop.pm (orac_check_data_dir): Finally fix -skip for -loop flag
+	with SCUBA
+
 2002-12-04  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* BaseNDF.pm (readhdr): Add BaseNDF and BaseFile. Now use
